[package]
name = "emul8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
wgpu = "0.13.1"
log = "0.4.17"
env_logger = "0.9.0"
pollster = "0.2.5"
bytemuck = { version = "1.10.0", features = [ "derive" ] }